--- a/17_plantillas_de_django.ipynb
+++ b/17_plantillas_de_django.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Susitución de datos de contexto en una plantila."
+    "## Sustitución de datos de contexto en una plantilla."
    ]
   },
   {
@@ -170,7 +170,13 @@
     "    'django.template.context_processors.request',\n",
     "    'django.contrib.auth.context_processors.auth',\n",
     "    'django.contrib.messages.context_processors.messages']}}]\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Configuración del directorio de plantillas.\n",
     "\n",
     "La lista correspondiente al nombre ```DIRS``` contiene la lista de directorios a los que puede consultar Django en busca de una plantilla."
@@ -265,10 +271,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "* Para las paltaformas basadas en GNU/Linux y MacOS X."
+    "settings.TEMPLATES[0]['DIRS']"
    ]
   },
   {
@@ -282,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para las plataformas basadas en GNU/Linux y MacOS X."
+    "* Para las plataformas basadas en Linux y MacOS X."
    ]
   },
   {
