--- a/19_contenido_estatico.ipynb
+++ b/19_contenido_estatico.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Contenido estático."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
     "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
@@ -238,17 +245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        1 archivo(s) copiado(s).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!copy src\\19\\settings.py tutorial\\tutorial\\settings.py"
    ]
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,52 +281,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El componente ```'django.contrib.staticfiles'``` se encuentra listado en ```settings.INSTALLED_APPS```."
+    "* El componente ```'django.contrib.staticfiles'``` se encuentra listado en ```settings.INSTALLED_APPS```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['django.contrib.admin',\n",
-       " 'django.contrib.auth',\n",
-       " 'django.contrib.contenttypes',\n",
-       " 'django.contrib.sessions',\n",
-       " 'django.contrib.messages',\n",
-       " 'django.contrib.staticfiles',\n",
-       " 'api',\n",
-       " 'main']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.INSTALLED_APPS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/static/'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.STATIC_URL"
    ]
@@ -357,74 +327,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\josech\\\\Dropbox\\\\Documentos\\\\py201\\\\tutorial/static/'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings.STATIC_ROOT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\josech\\Dropbox\\Documentos\\py201\\tutorial\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd tutorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "13 static files copied to 'C:\\Users\\josech\\Dropbox\\Documentos\\py201\\tutorial\\static', 119 unmodified.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python manage.py collectstatic --noinput"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\josech\\Dropbox\\Documentos\\py201\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd .."
    ]
@@ -546,54 +480,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "src\\19\\css\\bootstrap-grid.css\n",
-      "src\\19\\css\\bootstrap-grid.css.map\n",
-      "src\\19\\css\\bootstrap-grid.min.css\n",
-      "src\\19\\css\\bootstrap-grid.min.css.map\n",
-      "src\\19\\css\\bootstrap-reboot.css\n",
-      "src\\19\\css\\bootstrap-reboot.css.map\n",
-      "src\\19\\css\\bootstrap-reboot.min.css\n",
-      "src\\19\\css\\bootstrap-reboot.min.css.map\n",
-      "src\\19\\css\\bootstrap.css\n",
-      "src\\19\\css\\bootstrap.css.map\n",
-      "src\\19\\css\\bootstrap.min.css\n",
-      "src\\19\\css\\bootstrap.min.css.map\n",
-      "       12 archivo(s) copiado(s).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!copy src\\19\\css tutorial\\api\\static\\"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "src\\19\\js\\bootstrap.bundle.js\n",
-      "src\\19\\js\\bootstrap.bundle.js.map\n",
-      "src\\19\\js\\bootstrap.bundle.min.js\n",
-      "src\\19\\js\\bootstrap.bundle.min.js.map\n",
-      "src\\19\\js\\bootstrap.js\n",
-      "src\\19\\js\\bootstrap.js.map\n",
-      "src\\19\\js\\bootstrap.min.js\n",
-      "src\\19\\js\\bootstrap.min.js.map\n",
-      "        8 archivo(s) copiado(s).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!copy src\\19\\js tutorial\\api\\static\\"
    ]
@@ -611,71 +509,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\"cp\" no se reconoce como un comando interno o externo,\n",
-      "programa o archivo por lotes ejecutable.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cp -r src/19/imagenes tutorial/api/static/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "src\\19\\imagenes\\pythonista.png\n",
-      "        0 archivo(s) copiado(s).\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "El sistema no puede encontrar la ruta especificada.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!copy src\\19\\imagenes\\* tutorial\\api\\static\\imagenes\\"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " El volumen de la unidad C no tiene etiqueta.\n",
-      " El n£mero de serie del volumen es: 3C5C-8CEE\n",
-      "\n",
-      " Directorio de C:\\Users\\josech\\Dropbox\\Documentos\\py201\\tutorial\\api\\static\\imagenes\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No se encuentra el archivo\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!dir tutorial\\api\\static\\imagenes\\"
    ]
@@ -740,17 +594,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        1 archivo(s) copiado(s).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!copy src\\19\\base.html tutorial\\templates\\"
    ]
