--- a/20_gestion_de_formularios.ipynb
+++ b/20_gestion_de_formularios.ipynb
@@ -69,18 +69,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los archivo ```forms.py```.\n",
+    "## Los scripts ```forms.py```.\n",
     "\n",
-    "Los archivos ```forms.py``` contienen las definiciones de formularios de una aplicación."
+    "Los scripts ```forms.py``` contienen las definiciones de formularios de una aplicación."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase ```django.forms.Form```.\n",
+    "## El módulo ```django.forms``` .\n",
+    "\n",
+    "El módulo ```django.forms```` contiene una biblioteca de elementos que permiten generar diversos tipos de formularios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Las clases para generación de formas.\n",
+    "\n",
+    "Los formularios pueden ser diseñados a partir de dos clases:\n",
+    "\n",
+    "* La clase ```django.forms.Form```.\n",
+    "* La clase ```django.forms.ModelForm```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La clase ```django.forms.Form```.\n",
     "\n",
     "La clase ```django.forms.Form``` es la clase base para la creación de formularios. A partir de sus subclases es posible diseñar otros formularios.\n",
+    "\n",
+    "Esta clase permite diseñar formularios tradicionales en los que es posible ejecutar una acción una vez que se obtiene la información.\n",
+    "\n",
+    "\n",
+    "```\n",
+    "<clase de formulario>(Form):\n",
+    "    <campo 1> = <tipo de campo>(kwargs)\n",
+    "    <campo 2> = <tipo de campo>(kwargs)\n",
+    "    ...\n",
+    "    ...\n",
+    "    <campo n> = <tipo de campo>(kwargs)\n",
+    "```\n",
     "\n",
     "Para mayor referencia sobre esta clase  se puede consultar la siguiente liga:\n",
     "\n",
@@ -91,7 +124,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase ```django.forms.ModelForm```.\n",
+    "### La clase ```django.forms.ModelForm```.\n",
+    "\n",
+    "Esta clase crea objetos a partir de un modelos similares a los definidos con ```dango.db.models.Model```, de tal forma que los datos son guardados como el estado de un modelo.\n",
+    "\n",
+    "```\n",
+    "<clase de formulario>(ModelForm):\n",
+    "    <campo 1> = <tipo de campo>(kwargs)\n",
+    "    <campo 2> = <tipo de campo>(kwargs)\n",
+    "    ...\n",
+    "    ...\n",
+    "    <campo n> = <tipo de campo>(kwargs)\n",
+    "```\n",
+    "\n",
+    "Para mayor referencia sobre esta clase se puede consultar la siguiente liga:\n",
     "\n",
     "https://docs.djangoproject.com/en/2.2/topics/forms/modelforms/#django.forms.ModelForm"
    ]
@@ -102,7 +148,15 @@
    "source": [
     "## Los campos.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/forms/fields/#built-in-field-classes"
+    "Los campos corresponden a los atributos de las subclases de  ```django.forms.Form``` y  ```django.forms.ModelForm```.\n",
+    "\n",
+    "Los tipos de campos de las formas son muy similares a los tipos de campos de los modelos. \n",
+    "\n",
+    "Para mayor referencia sobre esta clase se puede consultar la siguiente liga:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/forms/fields/#built-in-field-classes\n",
+    "\n",
+    "Cada uno de los campos tiene un \"widget por defecto\". "
    ]
   },
   {
@@ -110,6 +164,35 @@
    "metadata": {},
    "source": [
     "## Los \"widgets\" de los campos.\n",
+    "\n",
+    "Los widgets son porciones de código HTML que despliegan un campo de un a forma particular. \n",
+    "\n",
+    "La clase base de los widgets es ```django.forms.Widget```. A partir de esta clase se han desarrollado diversos tipos de widgets.\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/forms/widgets/#widget\n",
+    "\n",
+    "\n",
+    "## Tipos de widgets.\n",
+    "\n",
+    "Además del widget por defecto, es posible definir el tipo de widget de un campo.\n",
+    "\n",
+    "\n",
+    "```\n",
+    "<clase de formulario>(ModelForm):\n",
+    "    ...\n",
+    "    ...\n",
+    "    <campo> = <tipo de campo>(kwargs, widget=<Tipo de widget> )\n",
+    "    ...\n",
+    "    ...\n",
+    "```\n",
+    "\n",
+    "En la siguiente liga está disponible una relación de widgets de *Django.*\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/forms/widgets/#built-in-widgets\n",
+    "\n",
+    "\n",
+    "Para mayor referencia peude consultar la siguiente liga:\n",
+    "\n",
     "\n",
     "https://docs.djangoproject.com/en/2.2/ref/forms/widgets/"
    ]
@@ -119,7 +202,37 @@
    "metadata": {},
    "source": [
     "## Validadores.\n",
+    "\n",
+    "Los validadores definen condiciones que debe de cumplir el dato que se ingresa.\n",
+    "\n",
+    "```\n",
+    "<clase de formulario>(ModelForm):\n",
+    "    ...\n",
+    "    ...\n",
+    "    <campo> = <tipo de campo>(kwargs, validators=[<validador 1>, <validador 2>,..., <validador n>, ])\n",
+    "    ...\n",
+    "    ...\n",
+    "```\n",
+    "\n",
+    "Para conocer el listado de validaddores disponibles puede consultar la siguiente liga:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/validators/#built-in-validators\n",
+    "\n",
+    "\n",
+    "Para mayor referecnia peude consultar la siguiente liga:\n",
+    "\n",
     "https://docs.djangoproject.com/en/2.2/ref/validators/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos de las formas.\n",
+    "\n",
+    "#### El método ```is_valid()```.\n",
+    "\n",
+    " Este método evalúa si los datos ingresados en un objeto forma son v;alidos."
    ]
   },
   {
@@ -128,17 +241,33 @@
    "source": [
     "## Protección contra el envío de falsificación de peticiones entre sitios (CSRF).\n",
     "\n",
-    "Cross Site Request Forgery.\n",
+    "Es posible que un atacante intente enviar peticiones falsificadas con la finalidad de vulnerar a un servidor desde un sitio ilegitimo. A este tipo de ataque se le conoce como \"Cross Site Request Forgery\".\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/csrf/\n",
+    "*Django* cuenta con un middleware que previene el envío de peticiones que no sean de un formulario válido.\n",
     "\n",
-    "django.middleware.csrf.CsrfViewMiddleware\n",
+    "\n",
+    "### El middleware ```django.middleware.csrf.CsrfViewMiddleware```.\n",
+    "\n",
+    "Este middleware permite enviar un valor testigo o \"token\" cada vez que se crea un contenido a partir de una plantilla que incluya un fomulario. \n",
+    "\n",
+    "Este token es único y es requerido \n",
+    "\n",
+    "\n",
     "\n",
     "### La etiqueta de plantilla *csrf*.\n",
     "\n",
+    "La etiqueta del token para el *DTL* es la siguiente:\n",
+    "\n",
     "```\n",
     "{% csrf_token %}\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "### El atributo ```csrfmiddlewaretoken```.\n",
+    "\n",
+    "Cuando se incluye ```{% csrf_token %}``` en un formulario, se crea un elemento ```<input>``` que es invisible al usuario, el caual tiene como nombre de atributo ```csrfmiddlewaretoken ```.\n",
+    "\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/csrf/"
    ]
   },
   {
@@ -164,6 +293,9 @@
    "metadata": {},
    "source": [
     "## La función ```django.shortcuts.render()```.\n",
+    "\n",
+    "Anteriormente se utilizó la función ```django.shortcuts.render_to_response()``` para enviar páginas creadas a partir de una plantilla. Sin embargo, para poder desplegar una plantilla con una forma se utiliza ```django.shortcuts.render()```.\n",
+    "\n",
     "\n",
     "```\n",
     "render(request, '<plantilla>', context=<contexto>)\n",
@@ -251,14 +383,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/api/urls.py"
+    "%pycat tutorial/api/urls.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definción de una forma."
+    "### El script ```src/20/forms.py```.\n",
+    "\n",
+    "El script ```src/20/forms.py``` contiene la definición de la clase ```FormaAlumno``` la cual contiene los campos:\n",
+    "\n",
+    "* ```numero_de_cuenta``` que debe de ser un número entero entre ```1000``` y ```9999```.\n",
+    "* ```nombre``` que debe de ser una cadena de caracters de hasta 50 caracteres.\n",
+    "* ```primer_apellido``` que debe de ser una cadena de caracters de hasta 50 caracteres.\n",
+    "* ```segundo_apellido``` que debe de ser una cadena de caracters de hasta 50 caracteres.\n",
+    "* ```carrera```, la cual debe de ser una opción del objeto ```CARRERAS```.\n",
+    "* ```semestre```, que debe de ser un número entero mayor o igual a ```1```.\n",
+    "* ```promedio```, que debe de ser un número de punto flotante entre ```0``` y ```10```.\n",
+    "* ```al_corriente```, que debe de ser un valor booleano.\n",
+    "\n",
+    "``` python\n",
+    "from django import forms\n",
+    "\n",
+    "CARRERAS =(('Sistemas', 'Sistemas'), \n",
+    "           ('Derecho', 'Derecho'), \n",
+    "           ('Actuaría', 'Actuaría'),\n",
+    "           ('Arquitectura', 'Arquitectura'),\n",
+    "           ('Administración', 'Administración'))\n",
+    "\n",
+    "class FormaAlumno(forms.Form):\n",
+    "    numero_de_cuenta = forms.IntegerField(label='Número de cuenta',\n",
+    "                                          min_value=1000, \n",
+    "                                          max_value=9999,\n",
+    "                                          error_messages={'required': 'Dato requerido'})\n",
+    "    nombre = forms.CharField(max_length=50, \n",
+    "                             label='Nombre')\n",
+    "    primer_apellido = forms.CharField(max_length=50, \n",
+    "                                      label='Primer apellido')\n",
+    "    segundo_apellido = forms.CharField(max_length=50, \n",
+    "                                       label='Segundo apellido', \n",
+    "                                       required=False)\n",
+    "    carrera = forms.ChoiceField(label='Carrera', \n",
+    "                                choices=CARRERAS)\n",
+    "    semestre = forms.IntegerField(label='Semestre', \n",
+    "                                  min_value=1)\n",
+    "    promedio = forms.FloatField(label='Promedio',\n",
+    "                                min_value=0.,\n",
+    "                                max_value=10.0)   \n",
+    "    al_corriente = forms.BooleanField(required=False)\n",
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -267,7 +442,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/forms.py tutorial/api/forms.py"
+    "!cp src/20/forms.py tutorial/api/forms.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\20\\forms.py tutorial\\api\\forms.py"
    ]
   },
   {
@@ -278,14 +462,55 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/api/forms.py"
+    "%pycat tutorial/api/forms.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La función de vista que contiene la forma."
+    "### El script ```src/20/template_views.py```.\n",
+    "\n",
+    "``` python\n",
+    "from .models import Alumno\n",
+    "from .forms import FormaAlumno\n",
+    "from django.http import HttpResponseRedirect, HttpResponse, JsonResponse\n",
+    "from django.shortcuts import render, render_to_response\n",
+    "from requests import post\n",
+    "\n",
+    "campos = ('numero_de_cuenta', 'nombre', 'primer_apellido', 'segundo_apellido', 'carrera', 'semestre', 'promedio', 'al_corriente')\n",
+    "\n",
+    "\n",
+    "def vista(request):\n",
+    "    lista = [[(campo, getattr(alumno, campo)) for campo in campos] for alumno in Alumno.objects.all()]\n",
+    "    return render_to_response('listado.html',{'lista': lista}) \n",
+    "\n",
+    "\n",
+    "def valida(request):\n",
+    "    lista = [[getattr(alumno, campo) for campo in campos] for alumno in Alumno.objects.all()]\n",
+    "    return render_to_response('valida.html',{'lista': lista}) \n",
+    "\n",
+    "def forma(request):\n",
+    "    if request.method == 'POST':\n",
+    "        forma = FormaAlumno(request.POST)\n",
+    "        if forma.is_valid():\n",
+    "            datos = request.POST.dict()\n",
+    "            datos.pop('csrfmiddlewaretoken')\n",
+    "            cuenta = datos.pop('numero_de_cuenta')\n",
+    "            if 'al_corriente' in datos:\n",
+    "                datos['al_corriente']=True\n",
+    "            else:\n",
+    "                datos['al_corriente']=False\n",
+    "            resultado = post('http://' + request.get_host() + '/api/{}'.format(cuenta), data=datos)\n",
+    "            if resultado.status_code == 200:\n",
+    "                return HttpResponse('<h1>¡Alta Exitosa!</h1>')    \n",
+    "            else: \n",
+    "                return HttpResponse('<h1>Ocurrió un error en el alta.</h1>'         \n",
+    "    else:\n",
+    "        forma = FormaAlumno()\n",
+    "\n",
+    "    return render(request, 'forma.html', {'forma': forma}) \n",
+    "```"
    ]
   },
   {
@@ -294,7 +519,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/template_views.py tutorial/api/template_views.py"
+    "!cp src/20/template_views.py tutorial/api/template_views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\20\\template_views.py tutorial\\api\\template_views.py"
    ]
   },
   {
@@ -305,14 +539,28 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/api/template_views.py"
+    "%pycat tutorial/api/template_views.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La plantilla que incluye a la forma."
+    "### La plantilla ```src/20/forma.html```\n",
+    "\n",
+    "``` html\n",
+    "{% extends \"base.html\" %}\n",
+    "{% block encabezado %}Forma de alta {% endblock %}\n",
+    "{% block cuerpo %}\n",
+    "    <form action=\"/api/alta/\" method=\"post\">\n",
+    "        <div class=\"form-group\">\n",
+    "            {% csrf_token %}\n",
+    "            {{ forma }}\n",
+    "        </div>\n",
+    "        <input type=\"submit\" value=\"Enviar\">\n",
+    "    </form>\n",
+    "{% endblock %}\n",
+    "```\n"
    ]
   },
   {
@@ -321,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/20/forma.html tutorial/templates/forma.html"
+    "!cp src/20/forma.html tutorial/templates/forma.html"
    ]
   },
   {
@@ -330,7 +578,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/templates/forma.html"
+    "!copy src\\20\\forma.html tutorial\\templates\\forma.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat tutorial/templates/forma.html"
    ]
   },
   {
