--- a/21_seguridad_y_autenticacion_basicas.ipynb
+++ b/21_seguridad_y_autenticacion_basicas.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Seguridad y autenticación básicas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Django* cuenta desde su instalación con un sistema simple de:\n",
     "\n",
     "* Gestión de usuarios.\n",
@@ -18,7 +25,9 @@
     "* Autenticación básica.\n",
     "* Gestión de sesiones.\n",
     "\n",
-    "La documentación correspondiente puede ser consultada en https://docs.djangoproject.com/en/2.2/topics/auth/\n",
+    "La documentación correspondiente puede ser consultada en la siguiente liga:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/topics/auth/\n",
     "\n",
     "**Nota:** Los alcances de este curso sólo cubren los temas de gestión básica de usuarios y autenticación simple."
    ]
@@ -43,26 +52,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El middleware que utliza Django por efecto es:\n",
+    "El middleware que utiliza *Django* por efecto es:\n",
     "\n",
     "* ```AuthenticationMiddleware```, el cual permite realizar la autenticación y autorización de acceso.\n",
     "* ```SessionMiddleware```, el cual gestiona las sesiones."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pycat tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -73,7 +66,7 @@
     "\n",
     "Los usuarios y grupos en *Django* se crean mediante modelos predeterminados.\n",
     "\n",
-    "* La clase ```django.contrib.auth.models.User``` es una subclase de  ```django.db..models.Model``` y corresponde al modelo básico de un usuario de *Django*. A partir de este momento se hará referencia a esta clase como  \"el modelo ```User```\"."
+    "* La clase ```django.contrib.auth.models.User``` es una subclase de  ```django.db.models.Model``` y corresponde al modelo básico de un usuario de *Django*. A partir de este momento se hará referencia a esta clase como ```User```."
    ]
   },
   {
@@ -122,11 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creación de un superusuario con ```manage.py```.\n",
+    "## Creación de un superusuario con el script ```manage.py```.\n",
     "\n",
+    "Para poder crear unsuperuisuario se utiliza el siguiente comando desde una terminal localziada en el directorio del proyecto.\n",
     "\n",
     "```\n",
-    "manage.py createsuperuser --email=\"<correo electronico>\" --user=\"<usuario>\"\n",
+    "pyhon3 manage.py createsuperuser --email=\"<correo electronico>\" --user=\"<usuario>\"\n",
     "```"
    ]
   },
@@ -160,7 +154,7 @@
     "* ```'logout/'``` salida de la sesión de un usuario.\n",
     "* ```'password_change/'```, la cual permite cambiar la contraseña de un usuario.\n",
     "* ```'password_reset/'```, la cual permite recuperar una contraseña.\n",
-    "* ```'reset/<uid64>/<totken>'```, el cual perimite reiniciar a un usuario.\n",
+    "* ```'reset/<uid64>/<token>'```, el cual perimite reiniciar a un usuario.\n",
     "* ```'password_change/done/'```.\n",
     "* ```'password_reset/done/'```.\n",
     "* ```'reset/done/'```.\n",
@@ -175,7 +169,7 @@
     "\n",
     "Con excepción de ```'login/'``` cada función de vista relacionada con cada patrón cuenta con una plantilla predefinida. Sin embargo, es posible crear plantillas a la medida.\n",
     "\n",
-    "Pro defecto las *URLs* de este módulo buscarán las plantillas correspondientes en el directorio```registration/``` el cual se encuentras a su vez en el directorio definido para las plantillas del proyecto."
+    "Pro defecto las *URLs* de este módulo buscarán las plantillas correspondientes en el directorio```registration/``` el cual se encuentra a su vez en el directorio definido para las plantillas del proyecto."
    ]
   },
   {
@@ -232,14 +226,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se sustituirá el scrpit ```tutorial/tutorial/urls.py``` con ```src/22/urls.py```."
+    "* Se sustituirá el script ```tutorial/tutorial/urls.py``` con ```src/22/urls.py```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para las platafomas GNU/Linux y MacOS X."
+    "* Para las platafomas Linux y MacOS X."
    ]
   },
   {
@@ -355,6 +349,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A continuacion se copiará al script ```src/22/urls.py``` en el directorio ```tutorial/templates/registration/```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las platafomas Linux y MacOS X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -364,12 +372,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la platafoma Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%copy src\\22\\login.html tutorial\\templates\\registration\\"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda despelgará el contenido del script ```tutorial/templates/registration/login.html```"
    ]
   },
   {
@@ -402,6 +424,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las platafomas Linux y MacOS X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -411,12 +440,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la platafoma Linux."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%copy src\\22\\settings.py tutorial\\tutorial\\settings.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La siguiente celda mostrará el resultado de la sustitución en ```tutorial/tutorial/settings.py```."
    ]
   },
   {
@@ -432,36 +475,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se iniciará el servidor."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd tutorial/"
+    "## Arranque desde una terminal.\n",
+    "\n",
+    "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Ejecute el siguiente comando:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "python manage.py runserver 0.0.0.0:8000\n",
+    "```\n",
+    "\n",
+    "**Nota:** \n",
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIAS:** \n",
-    "\n",
-    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
-    "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
+    "## Resultados."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!./manage.py runserver 0.0.0.0:5000"
+    "https://localhost:8000/login"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://localhost:8000/logout"
    ]
   },
   {
