--- a/22_aplicaciones_autenticadas.ipynb
+++ b/22_aplicaciones_autenticadas.ipynb
@@ -11,6 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Aplicaciones autenticadas.\n",
+    "\n",
+    "En muchos casos, el acceso a un recurso de una aplicación requiera que el suario cuente con las credenciales y los permisos correctos.\n",
+    "\n",
+    "*Django* incluye recursos que permiten crear funciones de vista que requieran de autenticación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## La función ```django.contrib.auth.decorators.login_required```.\n",
     "\n",
     "Esta función de primer orden permite ser aplicada como un decorador a aquellas funciones de vista que requieran que el usuario se autenticado con la siguiente sintaxis.\n",
@@ -29,7 +40,9 @@
    "source": [
     "## Ejemplo ilustrativo.\n",
     "\n",
-    "El script ```src/24/template_views.py``` contiene el siguiente código, el cual restringirá el acceso a las *URLs* que contiene plantillas de la aplicación ```api/```.\n",
+    "### El script ```src/22/template_views.py```.\n",
+    "\n",
+    "El script ```src/22/template_views.py``` contiene el siguiente código, el cual restringirá el acceso a las *URLs* que contienen plantillas de la aplicación ```api/```.\n",
     "\n",
     "* En caso de que el usuario no haya ingresado correctamente, será redirigido a ```accounts/login/``` y una vez que haya hecho su ingreso exitoso, regresará a la *URL* original.\n",
     "\n",
@@ -86,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se sustituirá al script ```tutorial/api/template_views.py``` con el script ```src/24/template_views.py```."
+    "* Se sustituirá al script ```tutorial/api/template_views.py``` con el script ```src/22/template_views.py```."
    ]
   },
   {
@@ -102,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/24/template_views.py tutorial/api/template_views.py"
+    "%cp src/22/template_views.py tutorial/api/template_views.py"
    ]
   },
   {
@@ -118,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% copy src\\24\\template_views.py tutorial\\api\\template_views.py"
+    "% copy src\\22\\template_views.py tutorial\\api\\template_views.py"
    ]
   },
   {
@@ -141,36 +154,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se iniciará el servidor."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd tutorial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**ADVERTENCIAS:** \n",
+    "## Arranque desde una terminal.\n",
     "\n",
-    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
+    "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Ejecute el siguiente comando:\n",
     "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!./manage.py runserver 0.0.0.0:5000"
+    "\n",
+    "```\n",
+    "python manage.py runserver 0.0.0.0:8000\n",
+    "```\n",
+    "\n",
+    "**Nota:** \n",
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
